# colorisator

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  README_PYPI.md  pyproject.toml  requirements.txt
colorisator/: __init__.py  colorisator.py
docs/bui/: .buildinfo  colorisator.html  copyright.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/bui/.doctrees/: colorisator.doctree  copyright.doctree  environment.pickle  index.doctree  modules.doctree
docs/bui/.doctrees/tutorials/: basics.doctree  flavor.doctree  gradient.doctree  installation.doctree  operations.doctree  palettes.doctree
docs/bui/_sources/: copyright.md.txt  copyright.rst.txt  index.rst.txt  modules.rst.txt
docs/bui/_sources/tutorials/: gradient.md.txt  operations.md.txt  palettes.md.txt
docs/bui/_static/: custom.js
docs/bui/tutorials/: basics.html  flavor.html  gradient.html  installation.html  operations.html  palettes.html
docs/source/: colorisator.rst  conf.py  copyright.rst  index.rst  modules.rst
docs/source/_static/: custom.css
docs/source/tutorials/: basics.md  flavor.md  installation.md
examples/: demo-base.py  demo-export.py  demo-gradient.py  demo-palette.py  demo.py
tests/: __init__.py  test_colorisator.py
